# Unstick

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
apps/guardian-service/: Cargo.toml
apps/guardian-service/src/: ipc_server.rs  main.rs  runtime.rs  update_ops.rs
apps/guardian-tray/: Cargo.toml
apps/guardian-tray/src/: client.rs  main.rs
apps/guardian-ui/: Cargo.toml
apps/guardian-ui/src/: app.rs  chrome.rs  client.rs  history.rs  main.rs  theme.rs  widgets.rs  win_round.rs
apps/unstick-updater/: Cargo.toml
apps/unstick-updater/src/: main.rs
crates/guardian-core/: Cargo.toml
crates/guardian-core/src/: advisory.rs  config.rs  control.rs  disk_calibrate.rs  envelope.rs  events.rs  ipc.rs  lib.rs  policy.rs  pressure.rs  profiles.rs  qos.rs  session_actions.rs  suspend_persist.rs  types.rs  update.rs
crates/guardian-detect/: Cargo.toml
crates/guardian-detect/src/: lib.rs
crates/guardian-mac/: Cargo.toml
crates/guardian-mac/src/: lib.rs
crates/guardian-win/: Cargo.toml
crates/guardian-win/src/: lib.rs  sensors.rs  throttle.rs
docs/: RELEASE-v0.1.0.md  RELEASE-v0.1.1.md  RELEASE-v0.1.2.md  RELEASE-v0.2.0.md  RELEASE-v0.3.0.md  RELEASE-v0.4.0.md  RELEASE-v0.5.0.md  RELEASE-v0.6.0.md  RELEASE-v0.7.0.md  RELEASE-v0.8.0.md  START-HERE.md  USER-GUIDE.md  critical-guard-soak.md  frontend-spec.md  p2-proof-checklist.md  packaging-and-soak.md  roadmap-future.md  roadmap-next-release.md  roadmap-v0.1.md  roadmap-v0.5.0.md  roadmap-v0.5.1.md  roadmap-v0.6.0.md  roadmap-v0.7.0.md  roadmap-v0.8.0.md  signing-blocker.md
fixtures/disk_hog/: Cargo.toml  main.rs
fixtures/fake_miner/: Cargo.toml  main.rs
fixtures/mapped_io_hog/: Cargo.toml  main.rs
fixtures/mem_hog/: Cargo.toml  main.rs
scripts/: Install-Autostart.ps1  Measure-SelfOverhead.ps1  Package-Portable.ps1  Uninstall-Autostart.ps1  Verify-DiskLock-L3.ps1  Verify-MemLock-L3.ps1  Verify-MemLock-L4.ps1  Verify-P2-4-FalsePositive.ps1  Verify-P2-Automated.ps1  Verify-P2-L4-Decoy.ps1  build.mjs  dev.mjs  install-autostart.sh  package-portable.sh
specs/backend/: disk-latency-tripwire-design.md  disk-lock-design.md  disk-lock-l3-evidence.md  dpc-isr-advisory-design.md  ecoqos-efficiency-design.md  focus-progressive-scheduling-design.md  freeze-safe-dynamic-control-design.md  guard-profiles-design.md  guardian-design.md  hard-fault-cause-split-design.md  hardware-control-l3-cliff-evidence.md  hardware-control-l3-cliff-run2-capture.json  hardware-control-north-star.md  hardware-control-redesign.md  idle-under-stress-design.md  in-app-update-design.md  macos-qos-appnap-design.md  mem-lock-design.md  mem-lock-l3-evidence.md  mem-lock-l4-checklist.md  mem-lock-l4-evidence.md  no-console-popup-design.md  p2-4-false-positive-evidence.md  p2-l4-decoy-evidence.md  prove-control-export-design.md  psi-shaped-pressure-design.md  self-overhead-design.md  self-overhead-investigation.md  self-overhead-l3-evidence.md  self-overhead-measure-after-20260717-222731.csv  self-overhead-measure-after2-20260717-222917.csv  self-overhead-measure-before-20260717-222431.csv  self-overhead-measure-v0.3.0-20260718-001131.csv  self-overhead-measure-v0.5.0-baseline-20260718-205406.csv  session-actions-summary-design.md  stuck-suspend-investigation.md  thermal-power-axis-design.md  timer-resolution-reject.md  v0.2-packaging-design.md
specs/research/: os-stutter-factors.md
