[workspace]
resolver = "2"
members = [
    "crates/guardian-core",
    "crates/guardian-win",
    "crates/guardian-mac",
    "crates/guardian-detect",
    "apps/guardian-service",
    "apps/guardian-tray",
    "apps/guardian-ui",
    "apps/unstick-updater",
]
default-members = [
    "apps/guardian-service",
    "apps/guardian-tray",
    "apps/guardian-ui",
    "apps/unstick-updater",
]

[workspace.package]
version = "0.8.0"
edition = "2021"
license = "MIT"
authors = ["Dendro-X0"]
repository = "https://github.com/Dendro-X0/Unstick"

[workspace.dependencies]
guardian-core = { path = "crates/guardian-core" }
guardian-win = { path = "crates/guardian-win" }
guardian-mac = { path = "crates/guardian-mac" }
guardian-detect = { path = "crates/guardian-detect" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
