[package]
name = "guardian-tray"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "guardian-tray"
path = "src/main.rs"

[dependencies]
guardian-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }

[target.'cfg(windows)'.dependencies]
tray-icon = "0.19"
tao = "0.30"
open = "5"
