[package]
name = "guardian-win"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
guardian-core = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Power",
] }
